--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="orange">#DB5B1E</color>
     <color name="light_orange">#F16321</color>
     <color name="dark_blue">#1C3B4D</color>
+    <color name="green">#348180</color>
 </resources>
