--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,31 +5,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@drawable/bg">
+    android:background="@drawable/login_background">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <TextView
+        <ImageView
+            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/textView_app_name"
-            android:text="Health app"
-            android:textColor="@color/white"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-            android:textAlignment="center"
-            android:layout_marginTop="50dp"/>
+            tools:ignore="MissingConstraints"
+            tools:layout_editor_absoluteX="124dp"
+            tools:layout_editor_absoluteY="202dp" />
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/imageView_logo"
-            android:src="@drawable/ic_logo_round_blue"
-            android:maxWidth="180dp"
+            android:src="@drawable/social"
+            android:maxWidth="300dp"
             android:adjustViewBounds="true"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="70dp"
             android:elevation="5dp"
             android:layout_gravity="center"/>
 
@@ -45,7 +43,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/textView_main_head"
-                android:text="Welcome\ to\nAndroid Firebase App"
+                android:text="Welcome\ to\nAndroid Health app"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                 android:layout_marginTop="100dp"/>
@@ -93,6 +91,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/imageView_show_hide_pwd"
                 android:id="@+id/button_login"
+                android:background="@drawable/dark_green_background"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="50dp"
                 android:text="Login"/>
