--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RegisterActivity"
-    android:background="@drawable/bg">
+    android:background="@drawable/login_background">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -85,7 +85,8 @@
                 android:id="@+id/button_register"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="50dp"
-                android:text="Sign up!"/>
+                android:text="Sign up!"
+                android:background="@drawable/dark_green_background"/>
 
             <ProgressBar
                 android:layout_width="wrap_content"
