--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="light_orange">#F16321</color>
     <color name="dark_blue">#1C3B4D</color>
     <color name="green">#348180</color>
+    <color name="peru">#DAA520</color>
 </resources>
