--- a/app/src/main/res/layout/activity_doctor_details.xml
+++ b/app/src/main/res/layout/activity_doctor_details.xml
@@ -23,7 +23,7 @@
 
     <ListView
         android:id="@+id/listViewDD"
-        android:layout_width="wrap_content"
+        android:layout_width="350dp"
         android:layout_height="500dp"
         android:layout_margin="70dp"
         app:layout_constraintTop_toBottomOf="@+id/textViewDDTitle"
