Начал работу над Lab Test

--- a/app/src/main/res/layout/activity_book_appointment.xml
+++ b/app/src/main/res/layout/activity_book_appointment.xml
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/border"
         android:hint="Fill Name"
+        android:textColorHint="@color/black"
         android:inputType="textPersonName"
         android:layout_marginTop="60dp"
         android:layout_marginStart="10dp"
@@ -46,6 +47,7 @@
         android:background="@drawable/border"
         android:inputType="textPersonName"
         android:hint="Address"
+        android:textColorHint="@color/black"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:minHeight="48dp"
@@ -61,6 +63,7 @@
         android:background="@drawable/border"
         android:hint="Contact Number"
         android:inputType="textPersonName"
+        android:textColorHint="@color/black"
         android:minHeight="48dp"
         android:padding="6dp"
         android:layout_marginStart="10dp"
@@ -77,6 +80,7 @@
         android:background="@drawable/border"
         android:hint="Fees"
         android:minHeight="48dp"
+        android:textColorHint="@color/black"
         android:padding="6dp"
         android:inputType="textPersonName"
         android:layout_marginStart="10dp"
