--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -32,6 +32,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/editText_register_name"
                 android:hint="Name"
+                android:textColorHint="@color/black"
+                android:textColor="@color/black"
                 android:background="@drawable/border"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="30dp"
@@ -45,6 +47,8 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/editText_register_email"
                 android:hint="Email"
+                android:textColorHint="@color/black"
+                android:textColor="@color/black"
                 android:background="@drawable/border"
                 android:layout_below="@+id/editText_register_name"
                 android:layout_marginStart="20dp"
@@ -62,6 +66,8 @@
                 android:background="@drawable/border"
                 android:layout_below="@+id/editText_register_email"
                 android:layout_marginStart="20dp"
+                android:textColorHint="@color/black"
+                android:textColor="@color/black"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
                 android:minHeight="48dp"
