--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -48,7 +48,7 @@
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/cardBuyMedicine"
+            android:id="@+id/cardByMedicine"
             android:layout_row="0"
             android:layout_column="1"
             android:layout_rowWeight="1"
@@ -72,7 +72,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="BUY MEDICINE"
+                    android:text="ByMedicine"
                     android:textAlignment="center"
                     android:textStyle="bold"/>
             </LinearLayout>
