--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,6 +58,8 @@
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/border"
                 android:hint="Password"
+                android:textColor="@color/black"
+                android:textColorHint="#707070"
                 android:inputType="textPassword"
                 android:minHeight="48dp"
                 android:padding="6dp" />
@@ -72,6 +74,8 @@
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/border"
                 android:hint="Email"
+                android:textColor="@color/black"
+                android:textColorHint="#707070"
                 android:inputType="textEmailAddress"
                 android:minHeight="48dp"
                 android:padding="6dp" />
@@ -102,6 +106,7 @@
                 android:id="@+id/textView_register"
                 android:layout_below="@id/button_login"
                 android:text="Not a user yet?"
+                android:textColor="@color/black"
                 android:textAlignment="center"
                 android:layout_marginTop="20dp"/>
 
