Реализовал вывод текста на lab_test_details и наконец-то убрал надпись сверху

--- a/app/src/main/res/layout/activity_book_appointment.xml
+++ b/app/src/main/res/layout/activity_book_appointment.xml
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/border"
         android:hint="Fill Name"
+        android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:inputType="textPersonName"
         android:layout_marginTop="60dp"
@@ -47,6 +48,7 @@
         android:background="@drawable/border"
         android:inputType="textPersonName"
         android:hint="Address"
+        android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -65,6 +67,7 @@
         android:inputType="textPersonName"
         android:textColorHint="@color/black"
         android:minHeight="48dp"
+        android:textColor="@color/black"
         android:padding="6dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -79,6 +82,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/border"
         android:hint="Fees"
+        android:textColor="@color/black"
         android:minHeight="48dp"
         android:textColorHint="@color/black"
         android:padding="6dp"
