--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,7 +20,7 @@
             android:layout_marginTop="50dp"/>
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="400dp"
             android:background="@drawable/border"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="30dp"
@@ -59,35 +59,43 @@
                 android:inputType="textEmailAddress"/>
 
             <EditText
+                android:id="@+id/editText_confirm_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/editText_register_pwd"
-                android:hint="Password"
-                android:background="@drawable/border"
-                android:layout_below="@+id/editText_register_email"
+                android:layout_below="@+id/editText_register_pwd2"
                 android:layout_marginStart="20dp"
-                android:textColorHint="@color/black"
-                android:textColor="@color/black"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
+                android:background="@drawable/border"
+                android:hint="Confirm Password"
+                android:inputType="textPassword"
                 android:minHeight="48dp"
                 android:padding="6dp"
-                android:inputType="textPassword"/>
+                android:textColor="@color/black"
+                android:textColorHint="@color/black" />
 
-            <ImageView
-                android:layout_width="33dp"
-                android:layout_height="33dp"
-                android:id="@+id/imageView_show_hide_pwd"
+            <EditText
+                android:id="@+id/editText_register_pwd2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/editText_register_email"
-                android:layout_marginTop="26dp"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/ic_hide_pwd"
-                android:layout_marginEnd="25dp"/>
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/border"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:minHeight="48dp"
+                android:padding="6dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black" />
+
+
 
             <Button
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/editText_register_pwd"
+                android:layout_below="@id/editText_confirm_password"
                 android:id="@+id/button_register"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="50dp"
