--- a/app/src/main/res/layout/activity_book_appointment.xml
+++ b/app/src/main/res/layout/activity_book_appointment.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        android:text="Book Appointment"
+        android:text="Запись на прием"
         android:textColor="#fff777"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -100,7 +100,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="124dp"
         android:background="@drawable/dark_green_background"
-        android:text="Register"
+        android:text="Регистрация"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/texFees" />
@@ -113,7 +113,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="196dp"
         android:background="@drawable/dark_green_background"
-        android:text="BACK"
+        android:text="Выход"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/texFees"
@@ -124,7 +124,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Select Time"
+        android:text="Выбрать время:"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.148"
         app:layout_constraintStart_toStartOf="parent"
@@ -135,7 +135,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Select Date"
+        android:text="Выбрать дату:"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.905"
         app:layout_constraintStart_toStartOf="parent"
