--- a/app/src/main/res/layout/activity_buy_medicine.xml
+++ b/app/src/main/res/layout/activity_buy_medicine.xml
@@ -10,7 +10,7 @@
         android:id="@+id/textViewBMTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Buy Medicines"
+        android:text="Покупка медицины"
         android:textColor="@color/black"
         android:textSize="34sp"
         android:textStyle="bold"
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="36dp"
-        android:text="BACK"
+        android:text="Выход"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.907"
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="36dp"
-        android:text="Go To Cart"
+        android:text="Перейти в Корзину"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.095"
