--- a/app/src/main/res/layout/activity_find_doctor.xml
+++ b/app/src/main/res/layout/activity_find_doctor.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="12dp"
         android:layout_marginBottom="12dp"
-        android:text="Top Doctors"
+        android:text="ВРАЧЕБНЫЕ НАПРАВЛЕНИЯ"
         android:textColor="#fff777"
         android:textSize="20sp"
         android:textStyle="bold"/>
@@ -54,7 +54,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="FAMILY PHYSICIANS"
+                        android:text="СЕМЕЙНЫЕ ВРАЧИ"
                         android:textAlignment="center"
                         android:textColor="@color/white"
                         android:textStyle="bold"/>
@@ -88,7 +88,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="DIETICIAN"
+                    android:text="ВРАЧ-ДИЕТОЛОГ"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textStyle="bold"/>
@@ -122,7 +122,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="DENTIST"
+                    android:text="ЗУБНОЙ"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textStyle="bold"/>
@@ -156,7 +156,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="SURGEON"
+                    android:text="ХИРУРГ"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textStyle="bold"/>
@@ -190,7 +190,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="CARDIOLOGISTS"
+                    android:text="КАРДИОЛОГИЯ"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textStyle="bold"/>
@@ -224,7 +224,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="BACK"
+                    android:text="ВЫХОД"
                     android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textStyle="bold"/>
