BuyMedicine полностью выполнена

--- a/app/src/main/res/layout/activity_buy_medicine_book.xml
+++ b/app/src/main/res/layout/activity_buy_medicine_book.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LabTestBookActivity"
+    tools:context=".BuyMedicineBookActivity"
     android:background="@drawable/home_background">
     <LinearLayout
         android:layout_width="match_parent"
@@ -114,6 +114,5 @@
 
 
     </LinearLayout>
-
 
 </ScrollView>
