--- a/app/src/main/res/layout/activity_lab_test.xml
+++ b/app/src/main/res/layout/activity_lab_test.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textViewDDTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Deliver Location"
+        android:text="Lab test"
         android:textColor="@color/black"
         android:textSize="34sp"
         android:textStyle="bold"
